Changelog
=========

2019.6.1 (unreleased)
---------------------

- When tearing down test layer, wait for solr to be torn down properly. [siegy]
- Configure Solr replication handler. [buchi]


2019.6.0 (2020-01-09)
---------------------

- Update Solr to version 8.4.0. [buchi]


2019.5.1 (2020-01-09)
---------------------

- Include permissions.zcml of Products.CMFEditions. [lgraf]


2019.5.0 (2019-12-10)
---------------------

- Bump ftw.solr to 2.8.0 to get support for uploading blobs. [lgraf]
- Add custom IWarmupPerformer to also warm up GEVER's trashed index. [lgraf]


2019.5.0rc1 (2019-12-03)
------------------------

- Make Period a proper plone content type. Migrate old SQL base periods. [deiferni]
- Restrict available users in sharing on workspaces and workspace folders. [njohner]
- Correct styling bug fix in tabbedview after showing bumblebee tooltip. [njohner]


2019.4.2 (2019-11-29)
---------------------

- Register virtual host monster on site setup for testserver [bierik]
- Catch oneoffixx api calls failures and show statusmessage instead. [phgross]
- Fix setting agenda item description. [deiferni]
- Fix automatic start of additionally added sequential tasks. [phgross]
- Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
- Only show workspace notification tab when feature is activated. [njohner]
- Fix response text for responsible changes to the same user. [phgross]
- Do not manipulate the persisten journal list on @history get. [phgross]
- Fix authorization handling when fetching the template_group_id. [phgross]
- Do not add document modified journal entry when saving file with OC RESTAPI. [njohner]
- Do not manipulate the persistent journal list on @journal get. [phgross]


2019.4.1 (2019-11-26)
---------------------

- Update French translations. [njohner]
- Update oneoffixx intergration to latest API changes. [phgross]


2019.4.0 (2019-11-22)
---------------------

- Pin ftw.monitor to 1.0.0. [lgraf]